--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,6 @@
 POSTGRES_URL="postgresql://postgres:password@localhost:5432/solidityVisualizer"
 NEXT_PUBLIC_API_DEV_URL=http://localhost:8000
+NEXT_PUBLIC_API_PROD_URL=
 
 OPENAI_API_KEY=
 
