--- a/backend/nginx/api.conf
+++ b/backend/nginx/api.conf
@@ -1,19 +1,15 @@
 server {
     listen 80;
-    server_name api.solidityvisualizer.com;
-
-    # Redirect HTTP to HTTPS
-    location / {
-        return 301 https://$host$request_uri;
-    }
+    server_name api.flowagents.com;
+    return 301 https://$server_name$request_uri;
 }
 
 server {
     listen 443 ssl;
-    server_name api.solidityvisualizer.com;
+    server_name api.flowagents.com;
 
-    ssl_certificate /etc/letsencrypt/live/api.solidityvisualizer.com/fullchain.pem;
-    ssl_certificate_key /etc/letsencrypt/live/api.solidityvisualizer.com/privkey.pem;
+    ssl_certificate /etc/letsencrypt/live/api.flowagents.com/fullchain.pem;
+    ssl_certificate_key /etc/letsencrypt/live/api.flowagents.com/privkey.pem;
 
     location / {
         proxy_pass http://localhost:8000;
