--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "type": "module",
   "scripts": {
     "build": "next build",
-    "build:vercel": "next build --config next.config.mjs",
+    "build:vercel": "next build",
     "build:prod": "NODE_ENV=production SKIP_TYPE_CHECK=true next build",
     "check": "next lint && tsc --noEmit",
     "db:generate": "drizzle-kit generate",
