--- a/package.json
+++ b/package.json
@@ -1,84 +1,66 @@
 {
-  "name": "flowagents",
+  "name": "solidity-visualizer",
   "version": "0.1.0",
   "private": true,
-  "type": "module",
   "scripts": {
-    "build": "next build",
-    "build:vercel": "next build",
-    "build:prod": "NODE_ENV=production SKIP_TYPE_CHECK=true next build",
-    "check": "next lint && tsc --noEmit",
-    "db:generate": "drizzle-kit generate",
-    "db:migrate": "drizzle-kit migrate",
-    "db:push": "drizzle-kit push",
-    "db:studio": "drizzle-kit studio",
     "dev": "next dev",
-    "lint": "next lint",
-    "lint:fix": "next lint --fix",
-    "preview": "next build && next start",
+    "build": "next build",
     "start": "next start",
-    "start:prod": "NODE_ENV=production next start",
-    "typecheck": "tsc --noEmit",
-    "format:write": "prettier --write \"**/*.{ts,tsx,js,jsx,mdx}\" --cache",
-    "format:check": "prettier --check \"**/*.{ts,tsx,js,jsx,mdx}\" --cache",
-    "clean": "rm -rf .next && rm -rf node_modules/.cache",
-    "dev:turbo": "NEXT_TURBO=1 next dev"
+    "lint": "next lint"
   },
   "dependencies": {
-    "@neondatabase/serverless": "^0.10.4",
-    "@radix-ui/react-dialog": "^1.1.4",
-    "@radix-ui/react-label": "^2.1.2",
-    "@radix-ui/react-progress": "^1.1.1",
-    "@radix-ui/react-slot": "^1.1.1",
-    "@radix-ui/react-switch": "^1.1.3",
-    "@radix-ui/react-tabs": "^1.1.3",
-    "@radix-ui/react-toast": "^1.2.6",
-    "@radix-ui/react-tooltip": "^1.1.6",
-    "@t3-oss/env-nextjs": "^0.10.1",
-    "@types/pg": "^8.11.11",
-    "@vercel/analytics": "^1.5.0",
-    "class-variance-authority": "^0.7.1",
-    "clsx": "^2.1.1",
-    "dotenv": "^16.4.7",
-    "drizzle-orm": "^0.33.0",
-    "geist": "^1.3.0",
-    "ldrs": "^1.0.2",
-    "lucide-react": "^0.468.0",
-    "mermaid": "^11.4.1",
-    "next": "^15.0.1",
-    "openai": "^4.91.1",
-    "pg": "^8.14.1",
-    "postgres": "^3.4.4",
-    "posthog-js": "^1.203.1",
-    "react": "^18.3.1",
-    "react-dom": "^18.3.1",
-    "react-icons": "^5.4.0",
-    "react-wrap-balancer": "^1.1.1",
-    "svg-pan-zoom": "^3.6.2",
-    "tailwind-merge": "^2.5.5",
+    "@codemirror/language": "^6.9.3",
+    "@codemirror/state": "^6.3.3",
+    "@codemirror/view": "^6.22.3",
+    "@lezer/highlight": "^1.2.0",
+    "@radix-ui/react-dropdown-menu": "^2.0.6",
+    "@radix-ui/react-icons": "^1.3.0",
+    "@radix-ui/react-select": "^2.0.0",
+    "@radix-ui/react-slot": "^1.0.2",
+    "@radix-ui/react-toast": "^1.1.5",
+    "@radix-ui/react-toggle": "^1.0.3",
+    "@t3-oss/env-nextjs": "^0.9.2",
+    "@tailwindcss/typography": "^0.5.10",
+    "@theme-toggles/react": "^4.1.0",
+    "@uiw/codemirror-extensions-langs": "^4.21.21",
+    "@uiw/codemirror-themes": "^4.21.21",
+    "@uiw/react-codemirror": "^4.21.21",
+    "class-variance-authority": "^0.7.0",
+    "clsx": "^2.1.0",
+    "codemirror": "^6.0.1",
+    "copy-to-clipboard": "^3.3.3",
+    "d3": "^7.8.5",
+    "geist": "^1.2.2",
+    "html-to-image": "^1.11.11",
+    "lucide-react": "^0.321.0",
+    "next": "^14.1.0",
+    "next-pwa": "^5.6.0",
+    "next-themes": "^0.2.1",
+    "pako": "^2.1.0",
+    "react": "18.2.0",
+    "react-dom": "18.2.0",
+    "tailwind-merge": "^2.2.1",
     "tailwindcss-animate": "^1.0.7",
-    "zod": "^3.24.1"
+    "vaul": "^0.9.0",
+    "zod": "^3.22.4"
   },
   "devDependencies": {
-    "@types/eslint": "^8.56.10",
-    "@types/node": "^20.14.10",
-    "@types/react": "^18.3.3",
-    "@types/react-dom": "^18.3.0",
-    "@types/svg-pan-zoom": "^3.4.0",
-    "@typescript-eslint/eslint-plugin": "^8.1.0",
-    "@typescript-eslint/parser": "^8.1.0",
-    "drizzle-kit": "^0.24.0",
-    "eslint": "^8.57.0",
-    "eslint-config-next": "^15.0.1",
-    "eslint-plugin-drizzle": "^0.2.3",
-    "postcss": "^8.4.39",
-    "prettier": "^3.3.2",
-    "prettier-plugin-tailwindcss": "^0.6.5",
-    "tailwindcss": "^3.4.3",
-    "typescript": "^5.5.3"
+    "@next/bundle-analyzer": "^14.1.0",
+    "@types/d3": "^7.4.3",
+    "@types/node": "^20.11.14",
+    "@types/pako": "^2.0.3",
+    "@types/react": "^18.2.48",
+    "@types/react-dom": "^18.2.18",
+    "autoprefixer": "^10.4.17",
+    "eslint": "^8.56.0",
+    "eslint-config-next": "^14.1.0",
+    "postcss": "^8.4.33",
+    "tailwindcss": "^3.4.1",
+    "typescript": "^5.3.3"
   },
-  "ct3aMetadata": {
-    "initVersion": "7.38.1"
-  },
-  "packageManager": "pnpm@9.13.0"
+  "browserslist": [
+    ">0.2%",
+    "not dead",
+    "not op_mini all"
+  ]
 }
