--- a/package.json
+++ b/package.json
@@ -13,10 +13,13 @@
     "@codemirror/state": "^6.3.3",
     "@codemirror/view": "^6.22.3",
     "@lezer/highlight": "^1.2.0",
+    "@prisma/client": "^6.5.0",
     "@radix-ui/react-dropdown-menu": "^2.0.6",
     "@radix-ui/react-icons": "^1.3.0",
+    "@radix-ui/react-label": "^2.1.2",
     "@radix-ui/react-select": "^2.0.0",
     "@radix-ui/react-slot": "^1.0.2",
+    "@radix-ui/react-tabs": "^1.1.3",
     "@radix-ui/react-toast": "^1.1.5",
     "@radix-ui/react-toggle": "^1.0.3",
     "@t3-oss/env-nextjs": "^0.9.2",
@@ -25,20 +28,25 @@
     "@uiw/codemirror-extensions-langs": "^4.21.21",
     "@uiw/codemirror-themes": "^4.21.21",
     "@uiw/react-codemirror": "^4.21.21",
+    "@vercel/analytics": "^1.5.0",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
     "codemirror": "^6.0.1",
     "copy-to-clipboard": "^3.3.3",
     "d3": "^7.8.5",
+    "drizzle-orm": "^0.41.0",
     "geist": "^1.2.2",
     "html-to-image": "^1.11.11",
     "lucide-react": "^0.321.0",
+    "mermaid": "^11.6.0",
     "next": "^14.1.0",
     "next-pwa": "^5.6.0",
     "next-themes": "^0.2.1",
+    "openai": "^4.91.1",
     "pako": "^2.1.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "svg-pan-zoom": "^3.6.2",
     "tailwind-merge": "^2.2.1",
     "tailwindcss-animate": "^1.0.7",
     "vaul": "^0.9.0",
@@ -51,11 +59,11 @@
     "@types/pako": "^2.0.3",
     "@types/react": "^18.2.48",
     "@types/react-dom": "^18.2.18",
-    "autoprefixer": "^10.4.17",
+    "autoprefixer": "^10.4.21",
     "eslint": "^8.56.0",
     "eslint-config-next": "^14.1.0",
-    "postcss": "^8.4.33",
-    "tailwindcss": "^3.4.1",
+    "postcss": "^8.5.3",
+    "tailwindcss": "^4.1.3",
     "typescript": "^5.3.3"
   },
   "browserslist": [
