--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@radix-ui/react-toast": "^1.1.5",
     "@radix-ui/react-toggle": "^1.0.3",
     "@t3-oss/env-nextjs": "^0.9.2",
+    "@tailwindcss/postcss": "^4.1.3",
     "@tailwindcss/typography": "^0.5.10",
     "@theme-toggles/react": "^4.1.0",
     "@uiw/codemirror-extensions-langs": "^4.21.21",
