--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@codemirror/language": "^6.9.3",
+    "@codemirror/lang-javascript": "^6.2.1",
     "@codemirror/state": "^6.3.3",
     "@codemirror/view": "^6.22.3",
     "@lezer/highlight": "^1.2.0",
@@ -22,6 +22,7 @@
     "@radix-ui/react-tabs": "^1.1.3",
     "@radix-ui/react-toast": "^1.1.5",
     "@radix-ui/react-toggle": "^1.0.3",
+    "@radix-ui/react-tooltip": "^1.0.7",
     "@t3-oss/env-nextjs": "^0.9.2",
     "@tailwindcss/postcss": "^4.1.3",
     "@tailwindcss/typography": "^0.5.10",
@@ -38,38 +39,35 @@
     "drizzle-orm": "^0.41.0",
     "geist": "^1.2.2",
     "html-to-image": "^1.11.11",
-    "lucide-react": "^0.321.0",
-    "mermaid": "^11.6.0",
-    "next": "^14.1.0",
-    "next-pwa": "^5.6.0",
+    "lucide-react": "^0.284.0",
+    "mermaid": "^10.9.0",
+    "next": "14.2.26",
     "next-themes": "^0.2.1",
-    "openai": "^4.91.1",
-    "pako": "^2.1.0",
-    "react": "18.2.0",
-    "react-dom": "18.2.0",
-    "svg-pan-zoom": "^3.6.2",
-    "tailwind-merge": "^2.2.1",
-    "tailwindcss-animate": "^1.0.7",
-    "vaul": "^0.9.0",
-    "zod": "^3.22.4"
+    "openai": "^4.37.0",
+    "react": "^18",
+    "react-dom": "^18",
+    "svg-pan-zoom": "^3.6.1",
+    "tailwind-merge": "^1.14.0"
   },
   "devDependencies": {
-    "@next/bundle-analyzer": "^14.1.0",
+    "@next/eslint-plugin-next": "^14.0.3",
     "@types/d3": "^7.4.3",
-    "@types/node": "^20.11.14",
-    "@types/pako": "^2.0.3",
-    "@types/react": "^18.2.48",
-    "@types/react-dom": "^18.2.18",
-    "autoprefixer": "^10.4.21",
-    "eslint": "^8.56.0",
-    "eslint-config-next": "^14.1.0",
-    "postcss": "^8.5.3",
-    "tailwindcss": "^4.1.3",
-    "typescript": "^5.3.3"
-  },
-  "browserslist": [
-    ">0.2%",
-    "not dead",
-    "not op_mini all"
-  ]
+    "@types/node": "^20",
+    "@types/react": "^18",
+    "@types/react-dom": "^18",
+    "@types/svg-pan-zoom": "^3.6.5",
+    "@typescript-eslint/eslint-plugin": "^6.11.0",
+    "@typescript-eslint/parser": "^6.11.0",
+    "autoprefixer": "^10.4.18",
+    "eslint": "^8",
+    "eslint-config-next": "14.2.26",
+    "eslint-config-prettier": "^9.0.0",
+    "eslint-plugin-react": "^7.33.2",
+    "eslint-plugin-react-hooks": "^4.6.0",
+    "postcss": "^8.4.36",
+    "prettier": "^3.1.0",
+    "prettier-plugin-tailwindcss": "^0.5.7",
+    "tailwindcss": "^3.4.0",
+    "typescript": "^5"
+  }
 }
