--- a/package.json
+++ b/package.json
@@ -47,7 +47,8 @@
     "react": "^18",
     "react-dom": "^18",
     "svg-pan-zoom": "^3.6.1",
-    "tailwind-merge": "^1.14.0"
+    "tailwind-merge": "^1.14.0",
+    "tailwindcss-animate": "^1.0.7"
   },
   "devDependencies": {
     "@next/eslint-plugin-next": "^14.0.3",
@@ -55,7 +56,7 @@
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
-    "@types/svg-pan-zoom": "^3.6.5",
+    "@types/svg-pan-zoom": "^3.6.1",
     "@typescript-eslint/eslint-plugin": "^6.11.0",
     "@typescript-eslint/parser": "^6.11.0",
     "autoprefixer": "^10.4.18",
